runbot_merge/static/src/runbot_merge.css
/* ... */
.splits {
    background-color: var(--bg-warning);
}
.pr-awaiting {
    opacity: 0.8;
    background-color: var(--bg-warning);
}
.pr-blocked {
    opacity: 0.6;
    background-color: var(--bg-danger);
}
.pr-failed {
    opacity: 0.9;
    background-color: var(--bg-info);
}

nav {
    ul {
        list-style: none;
        display: flex;
        padding: 0;
        margin: 1rem 0 0;
        justify-content: center;
    }
    a {
        padding: 0.5rem 1rem;
    }
}

aside {
    ul {
        display: inline;
        list-style: none;
        padding: 0;
        margin: 0 0 10px;

        &>li {
            display: inline-block;
            padding: 0 5px;
        }
    }

    h1 &, h2 &, h3 &, h4 &, h5 &, h6 & {
        display: inline-block;
        font-size: 50%;
    }
}

header > nav {
    padding: 0.5rem 2rem;

    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: space-between;

    ul {
        margin: 0;
        &.top_menu a {
            color: inherit;
        }
        &.extras {
            display: flex;
            gap: 0.5rem;

            color: #685563;
            border-color: #685563;
            &>li>a {
                color: inherit;
                border-radius: 0.25rem;
                &:hover, &:active, &:focus {
                    text-decoration: none;
                    background-color: #685563;
                    color: white;
                }
            }
        }
    }
    .theme-toggle {
        display: inline-flex;
        button {
            cursor: pointer;
            background-color: transparent;
            border-radius: 0;
            border: 1px solid;
            border-right: none;
            &:hover, &.active {
                background-color: #685563;;
                color: white;
                border-color: #685563;
            }
        }
        button:first-child {
            border-radius: 0.25rem 0 0 0.25rem;
        }
        button:last-child {
            border-radius: 0 0.25rem 0.25rem 0;
            border-right: 1px solid #685563;
        }
    }
}

/* region bs dropdown */
.dropdown {
    position: relative;

    &>.dropdown-toggle {
        border: 1px solid transparent;
        &:after {
            display: inline-block;
            margin-left: 0.255em;
            vertical-align: 0.255em;
            content: "";
            border-top: 0.3em solid;
            border-right: 0.3em solid transparent;
            border-bottom: 0;
            border-left: 0.3em solid transparent;
        }
    }
    &>.dropdown-menu {
        display: none;
        position: absolute;
        color: var(--color-foreground);
        background: var(--color-background);
        min-width: 100%;
        padding: 0.5rem 0;
        margin: 0;
        text-align: left;
        border-radius: 0.25rem;
    }
    &>.dropdown-toggle.show+.dropdown-menu {
        display: block;
    }

    .dropdown-item {
        color: inherit;
        display: block;
        width: 100%;
        padding: 0.25rem 1rem;
        &:hover {
            text-decoration: none;
            background-color: oklch(from var(--color-foreground) l c h/0.1);
        }
    }
}
/* endregion */

ul.stagings {
    list-style: none;
    padding: 0;
    margin: 0;

    --pad1: 0.1em;
    --pad2: 0.5em;
    display: grid;
    /* min of a newspaper column + list item padding (desktop), or half the*/
    /* viewport width minus the page gutter (mobile)*/
    grid-template-columns: repeat(12, minmax( min(11pc + var(--pad1) + var(--pad2), 49vw - var(--gutter-x) * 0.5), 1fr));
    grid-template-rows: repeat(2, auto);
    grid-column-gap: 1px;
    /*
    This is Not Awesome, but apparently you can not combine auto in one
    direction and visible in the other, so you can't have the dropdown
    get out of the stagings at the bottom while having the stagings
    horizontally scrollable (at least not without JS scrolling).
     */
    overflow-x: clip;

    &>li.staging {
        grid-template-rows: subgrid;
        display: grid;
        grid-row: 1/-1;

        &>ul {
            list-style: none;
            padding: 0;
            margin: 0;

            &>li.batch {
                line-break: anywhere;
                padding: 0 var(--pad1) 0 var(--pad2);

                &:first-child {
                  padding-top: var(--pad1);
                }
                &:last-child {
                  padding-bottom: var(--pad1);
                }
                &:not(:last-child) {
                  border-bottom: 1px solid var(--border-color);
                }
                & a:not(:last-of-type) a:after {
                    content: ",";
                }
            }
        }
        &>details {
            margin: 0.5em 0;
            &>summary {
                text-indent: 1em hanging;
            }
        }
    }
}

/* region specific widgets */
#alerts {
    text-align: center;
    &>*:first-child {
        margin-top: 0.66em;
    }
    &>* {
        margin-bottom: 0.33em;
    }
}

details[name="dropdown"] {
    position: relative;
    &>summary {
        padding: 0 var(--pad1, 0) 0 var(--pad2, 0);
        cursor: pointer;
        user-select: none;
    }
    &>div {
        position: absolute;
        z-index: 100;
        max-height: 70vh;
        min-width: 10rem;
        overflow: auto;

        color: var(--color-foreground);
        background-color: var(--color-background);

        padding: 0.5rem 0;
        border: 1px solid transparent;
        border-radius: 0.25rem;

        /*inset: 100% 0 auto auto;*/

        & > * {
            display: block;
            width: 100%;
            padding: 0.25rem 1rem;
            white-space: nowrap;
            color: color-mix(in srgb, var(--link-color) 85%, var(--color-background));
            &:hover {
                color: color-mix(in srgb, var(--link-color), var(--color-foreground));
            }
        }
    }
}
/* ... */

